[package]
name = "warmup-vertex-rust"
version = "0.1.0"
edition = "2021"
description = "Tashi Vertex Warmup – Stateful Handshake starter template"

[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
tashi-vertex = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
