[package]
name = "warmup-vertex-rust"
version = "0.1.0"
edition = "2021"
description = "Tashi Vertex Warmup – Stateful Handshake starter template"

[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
tashi-vertex = { git = "https://github.com/tashigit/tashi-vertex-rs.git" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
